- [MINOR] Increase visibility of internal SSOStateSerializer for OneAuth usage (integration steps available at aka.ms/AAd2vt8) (#1448, #1509)

Version 3.5.0
----------
- [MINOR] Code changes for new OneAuth cache key migration API (#1464)

Version 3.4.5
----------
- [PATCH] Fix for misconfigured ADALOAuth2TokenCache, adds new SharedPreferencesFileManager that defaults to MODE_PRIVATE (#1444)

Version 3.4.4
----------
- [MINOR] Introduce support for authorization activities to be performed in the Android Task as the Activity that was provided for an interactive request.
- [PATCH] Rev Nimbus version: 8.2 -> 9.9 (#1346)
- [PATCH] Perf: Avoid repeated calls to getCredentials() when loading from cache (#1334)
- [PATCH] Only hit cache once when loading x-tenant idtokens (#1385)
- [PATCH] Disregard pageload errors for the non-primary frame during interactive auth (#1357)
- [PATCH] Avoid unnecessary BAM-cache reload (#1439, cherry-picked from #1426)
- [PATCH] Concurrency fix: revert thread pool construction changes in CommandDispatcher (#1434)

Version 3.4.3
----------
- [PATCH] Revert connection detection change, disable throttling cache (#1351, #1353)

Version 3.4.2
----------
- [PATCH] Msal removeAccount shouldn't invoke broker's removeAccount (#1336)

Version 3.4.1
----------
- [PATCH] Adding checks to not cache certain ErrorCodes. (#1330, #1329)

Version 3.4.0
----------
- [MINOR] Enable optional refresh token in cache (#1294)
- [MINOR] Hide Switch Account in Broker interactive flows (#1284)
- [MINOR] Adds the ability for KeyAccessors to expose their manager (#1285)
- [MINOR] Propagate unknown parameters from the server (#1292)
- [MINOR] Adds new API support for the broker - SSO token and flight support (#1290)
- [MINOR] Elevates AndroidCommon Logger out of internal package (#1279)
- [MINOR] Automate broker protocol version computation. (#1301)

Version 3.3.1
----------
- [MINOR] Enables removeAccount api to remove account records from all environments (#1248)